[metadata]
name = facet
version = attr: facet.__version__
url = https://github.com/pohmelie/facet
author = pohmelie
author_email = multisosnooley@gmail.com
description = service manager for asyncio
long_description = file: readme.md
long_description_content_type = text/markdown
license = MIT
license_file = license.txt
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
py_modules = facet
python_requires = >= 3.6

[options.extras_require]
dev =
    pytest
    pytest-asyncio
    pytest-cov
    flake8
